@@ -1,0 +1,29 @@
+# READY FOR REVIEW/NOT READY
+- (Edit the above to reflect status)
+
+# Summary
+- TL;DR - what's this PR for?
+
+# Needed By (Date)
+- When does this need to be merged by?
+
+# Urgency
+- How critical is this PR?
+
+# Steps to Test
+
+1. Do this
+1. Then this
+2. Then this
+
+# Affected Projects or Products
+- Does this PR impact any particular projects, products, or modules?
+
+# Associated Issues and/or People
+- JIRA ticket
+- Other PRs
+- Any other contextual information that might be helpful (e.g., description of a bug that this PR fixes, new functionality that it adds, etc.)
+- Anyone who should be notified? (`@mention` them here)
+
+# See Also
+- [PR Checklist](https://gist.github.com/sherakama/0ba17601381e3adbe0cad566ad4d80a5)
